stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__append_empty_blocks.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch34,
    error: "Invalid Nakamoto block: failed static checks",
  )),
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch40,
    error: "Invalid Nakamoto block: failed static checks",
  )),
]
