stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_bad_map_name.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "7f15bb069bea6c767d55397e51f6d764a13e6173b004fa4d2431dcd70fc8d15c",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-map-name-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: invalid map name) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1047,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1047,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "9998e5d1cdf731da9333aef3b944384bfd9c58e2e24279377781b7e342c54feb",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-map-name-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: invalid map name) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1047,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1047,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "59bb1b7d9037c1cbe0bfe3ebcdfb419b321c8d7a08fff0f12514a22d7f972fb8",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-map-name-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: invalid map name) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1047,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1047,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "2bb72e6d97fc0f193b94f101db8f94a580dfad274e336c8a12b8fcc5c4aab4da",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-map-name-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: invalid map name) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1047,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1047,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "3cc7ed2a05dd4b7be301ac340ffd62c8e1970949920263691af53803c37c5251",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-map-name-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: invalid map name) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1047,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1047,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "12fcbf5b42e397aa06ed486c2dbf0a2597ac9e24033634aa8687ee07b1647949",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-map-name-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: invalid map name) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1047,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1047,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "df61ba29a6cb3256fc56901aab2933e0b33f0dc9af09be6aae9a46dd92c027a9",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-map-name-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: invalid map name) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1047,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1047,
    ),
  )),
]
