stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_bad_map_type_definition.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "2ecd86defc6de10d6515f8de1c43c6d17802f409bd93ad445d7ca35a547bc44b",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-map-type-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: invalid map definition) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 10,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1372,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 10,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1372,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "bcc385be5f182089ab65c158423733f18ab76e8a39aaeb0d6135792f68ed0aca",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-map-type-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: invalid map definition) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 10,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1372,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 10,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1372,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "215bcb3ec1087d2ec9f6194d5531fd747abf8fdc3d3f4dd308d808c2f2e0f081",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-map-type-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: invalid map definition) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 10,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1372,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 10,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1372,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "3362860aa4daba98bfc71ade1c97b6486641efc3d6d9766ac37f2801cddc9adc",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-map-type-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: invalid map definition) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 10,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1372,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 10,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1372,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "e5226132580df1ebc4d1e4d5b0a8db9a41de39ef9379dde0224d41e8c72d269a",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-map-type-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: invalid map definition) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 10,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1372,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 10,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1372,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b1375a51953379f47e9e7df29bd1c94bfcd718add07e9460a9a0b7419f3a0cb7",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-map-type-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: invalid map definition) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 10,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1372,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 10,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1372,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "cd1e4fda29c8e2520080b607e28b1b542c169cf79517fc04a0c5433b35fd0124",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-map-type-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: invalid map definition) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 10,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1372,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 10,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1372,
    ),
  )),
]
