stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_bad_match_input.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "e24e5dc2a1dba6b822ae9cdc5fc601015617454217e4e8e303be952d9d043007",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-match-input-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: match requires an input of either a response or optional, found input: \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 14,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1662,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 14,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1662,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "c5e60a48150d519d79bcb39b223ca2fd27e7aefc0e131cb3e2f7ea48b14e3e6f",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-match-input-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: match requires an input of either a response or optional, found input: \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 14,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1662,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 14,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1662,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "2b17d111cc57c777a0d70c6336546fef9a565d27e517afc9b4cc0c7413366251",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-match-input-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: match requires an input of either a response or optional, found input: \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 14,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1662,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 14,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1662,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "c453d0b23116174bd909b10334a8c7948631b4ea220c9745a1495977d7f6acbe",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-match-input-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: match requires an input of either a response or optional, found input: \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 14,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1662,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 14,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1662,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "0aea2f340744445be13bad754380acde22b77056b54fd01c59aae6ba017261ef",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-match-input-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: match requires an input of either a response or optional, found input: \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 14,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1662,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 14,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1662,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "6bd043066761e2c1167d11b77f370233c34a7a525661ee7f01e27c5b848b6bca",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-match-input-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: match requires an input of either a response or optional, found input: \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 14,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1662,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 14,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1662,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7a2847ffda222e45c3743586af72312cc72cb8809f05e09f0040f7ee1ea6c5a2",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: bad-match-input-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: match requires an input of either a response or optional, found input: \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 14,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1662,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 14,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1662,
    ),
  )),
]
